Open Api Contract First - Part 3
