# anime-service/src/main/java/academy/devdojo/anime/AnimePostRequest.java
@@ -1,14 +1,0 @@
-package academy.devdojo.anime;
-
-import jakarta.validation.constraints.NotBlank;
-import lombok.Getter;
-import lombok.Setter;
-import lombok.ToString;
-
-@Getter
-@Setter
-@ToString
-public class AnimePostRequest {
-    @NotBlank(message = "The field 'name' is required")
-    private String name;
-}
