# anime-service/src/main/java/academy/devdojo/anime/AnimePostResponse.java
@@ -1,14 +1,0 @@
-package academy.devdojo.anime;
-
-import lombok.Builder;
-import lombok.Getter;
-import lombok.Setter;
-
-@Getter
-@Setter
-@Builder
-public class AnimePostResponse {
-
-    private Long id;
-    private String name;
-}
